# omsim

./: .gitignore  CMakeLists.txt  README.md  compile.sh  enzymes.xml  example.xml  install.sh  notes  package.sh  setup.py
example/: minimal.xml
example/Fixed-SF-Estimate/: README.md  example-auto-chip-sf.xml  example-fixed-chip-sf.xml
example/Irys/: enzymes.xml  example.xml
example/Molecules-Count/: example-chips.xml  example-coverage.xml  example-max_num_mols.xml  example-min_num_mols.xml  example-num_mols.xml  run.sh
omsim/: install.sh  package.sh
omsimgui/: .gitignore  CMakeLists.txt  compile-windows.sh  compile.sh
omsimgui/src/: AdvancedPanel.cpp  AdvancedPanel.hpp  BasicPanel.cpp  BasicPanel.hpp  CMakeLists.txt  ConfigurationPanel.cpp  EnzymeDialog.cpp  EnzymeDialog.hpp  EnzymePanel.cpp  EnzymePanel.hpp  ListBoxPanel.cpp  ListBoxPanel.hpp  MainFrame.cpp  MainFrame.hpp  Notebook.cpp  Notebook.hpp  TagPanel.cpp  TagPanel.hpp  configuration.hpp  enzyme.hpp  main.cpp  main.hpp
src/: AdvancedPanel.cpp  AdvancedPanel.h  AdvancedPanel.hpp  BasicPanel.cpp  BasicPanel.h  BasicPanel.hpp  CMakeLists.txt  ConfigurationPanel.cpp  ConfigurationPanel.hpp  EnzymeDialog.cpp  EnzymeDialog.hpp  EnzymePanel.cpp  EnzymePanel.hpp  KMP.py  ListBoxPanel.cpp  ListBoxPanel.hpp  MainFrame.cpp  MainFrame.hpp  Notebook.cpp  Notebook.h  Notebook.hpp  TagPanel.cpp  bionanosim.py  bnx.py  configuration.hpp  enzyme.hpp  executablePath.hpp  knick.py  main.cpp  main.hpp  nick.py  noise.py  omsim.py  readFasta.py  reverseComplement.py  settings.py  util.py  wx.hpp
src/omsim/: bnx.py  (+5 more)
(+33 files in other folders)
